fixed the navbar spacing and changed the active link styles

--- a/src/components/Navbar/NavLinks/NavLinks.module.scss
+++ b/src/components/Navbar/NavLinks/NavLinks.module.scss
@@ -1,7 +1,6 @@
 @import "../../../style/variables.scss";
 
 .navLink {
-  font-size: 1.1em;
   color: $grey-3;
   text-decoration: none;
   cursor: pointer;
