--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -35,6 +35,6 @@ $standard-box-shadow: 1px 1px 5px $shadow-color;
 //mixins
 @mixin active-link {
   border-bottom: solid 1px $grey-1;
-  filter: drop-shadow(2px 3px 9px $grey-1);
+  filter: drop-shadow(2px 3px 13px $grey-1);
   //   transform: scale(0.98);
 }
